[tool.poetry]
name = "repl_python3_football-mashup-bot"
version = "0.1.0"
description = ""
authors = ["NazeemNato <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
cairosvg = "^2.5.2"
flask = "^2.0.1"
tweepy = "^3.10.0"
bs4 = "^0.0.1"
lxml = "^4.6.3"
tinydb = "^4.5.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
